# syncpond

./: .gitignore  LICENSE  README.md
client/: package.json  pnpm-lock.yaml  vitest.config.ts
client/src/: index.ts  types.ts
client/src/__tests__/: client.test.ts  setup.ts
lib/rust/: Cargo.toml  build.rs
lib/rust/src/: lib.rs  protocol.rs
scripts/: build_push.sh  publish_ts_client.sh
server/: Cargo.toml  build.rs  tarpaulin.toml
server/crates/server/: Cargo.toml
server/crates/server/doc/: client-protocol.md
server/crates/server/proto/: syncpond.proto
server/crates/server/src/: command.rs  main.rs
server/crates/server/src/downstream/: auth.rs  hub.rs
server/crates/server/src/upstream/: grpc.rs
server/crates/sp-downstream/: Cargo.toml  build.rs
server/crates/sp-downstream/proto/: downstream.proto
server/crates/sp-downstream/src/: auth.rs  connection.rs  downstream.rs  hub.rs  lib.rs  server.rs
server/crates/sp-kernel/: Cargo.toml
server/crates/sp-kernel/src/: kernel.rs  lib.rs
server/crates/sp-kernel/src/persistance/: mod.rs
server/crates/sp-kernel/src/state/: mod.rs
server/crates/sp-protocol/: Cargo.toml
server/crates/sp-protocol/src/: lib.rs
server/crates/sp-upstream/: Cargo.toml  build.rs
server/crates/sp-upstream/src/: grpc.rs  lib.rs
server/doc/: app-protocol.md
server/example/: config.yaml
server/proto/: syncpond.proto
server/src/: auth.rs  command.rs  commands.rs  kernel.rs  main.rs  rate_limiter.rs  state.rs  ws.rs
server/src/downstream/: auth.rs  connection.rs  hub.rs  mod.rs  server.rs  ws.rs
server/src/persistance/: mod.rs
server/src/state/: mod.rs  rooms.rs
server/src/upstream/: grpc.rs  mod.rs
todo/: easy-fixes.md
work/ideas/: README.md  architecture.md  bugs.md  client.md  devops.md  features.md  performance.md  security.md
work/plans/: sled-persistence-plan.md
