[package]
name = "syncpond-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.22"
futures-util = "0.3"
anyhow = "1.0"
jsonwebtoken = "8"
uuid = { version = "1.4", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
include_dir = "0.7"
subtle = "2"

# gRPC / protobuf
tonic = { version = "0.6", features = ["transport"] }
prost = "0.9"
prost-types = "0.9"
tonic-reflection = "0.3"

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"
protoc-bin-vendored = "3.2.0"

