[package]
name = "syncpond-client"
version = "0.1.0"
edition = "2021"
description = "Syncpond gRPC client for the upstream CommandService"
license = "MIT"

[dependencies]
tonic = { version = "0.6", features = ["transport"] }
prost = "0.9"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"
protoc-bin-vendored = "3.2.0"
