[package]
name = "sp-downstream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.22"
sp-protocol = { path = "../sp-protocol" }
futures-util = "0.3"
anyhow = "1.0"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
prost = { version = "0.12", features = ["prost-derive"] }
tonic = { version = "0.6", features = ["transport"] }

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.12"
protoc-bin-vendored = "3.2.0"
