[package]
name = "sp-upstream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tonic = { version = "0.6", features = ["transport"] }
prost = "0.9"
tonic-reflection = "0.3"
subtle = "2"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"
protoc-bin-vendored = "3.2.0"
